Some fixes after first review

--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -6,6 +6,10 @@
     color: #fff;
     margin: 0;
     padding: 0;
+    text-overflow: ellipsis; 
+    white-space: nowrap; 
+    overflow: hidden;
+    max-width: 90%;
 }
 
 @media (max-width: 900px) {
