--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -2,6 +2,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
     align-items: center;
+    margin: 0;
 }
