--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -5,7 +5,7 @@
     row-gap: 20px;
     column-gap: 17px;
     max-width: 880px;
-    margin: 0 auto 66px;
+    margin: 0 0 66px;
 }
 
 @media (max-width: 900px) {
