--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,19 +1,17 @@
 .header {
     display: flex;
-    margin: 45px auto 40px auto;
+    margin: 45px 0 40px 0;
     max-width: 880px;
     width: 100%;
     box-sizing: border-box;
-    padding: 0;
-    border-bottom: 1px solid #545454;
-    height: 74px;
+    padding: 0 0 41px 0;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media (max-width: 900px) {
     .header {
         max-width: 320px;
-        width: 100%;
-        height: 56px;
         margin: 28px auto 0;
+        padding-bottom: 31px;
     }
 }
