--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -8,16 +8,17 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     color: #000;
     max-width: 100%;
-    padding: 0;
-    margin-bottom: 42px;
+    padding: 0 0 12px 0;
+    margin-bottom: 30px;
 }
 
 .popup__input:last-of-type {
-    margin-bottom: 61px;
+    margin-bottom: 48px;
 }
 
 @media (max-width: 900px) {
     .popup__input:last-of-type {
         margin-bottom: 45px;
+        padding-bottom: 13px;
     }
 }
