--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -6,7 +6,7 @@
     width: 150px;
     background-color: transparent;
     background-repeat: no-repeat;
-    border: 1px solid #fff;
+    border: 2px solid #fff;
     align-self: center;
     margin: 0;
     padding: 0;
@@ -15,13 +15,14 @@
 
 .profile__add-button:hover {
     cursor: pointer;
-    opacity: 0.5;
+    opacity: 0.6;
 }
 
 @media (max-width: 900px) {
     .profile__add-button {
         height: 50px;
         width: 282px;
-        margin-top: 36px;
+        margin-top: 34px;
+        background-size: 16px 16px;
     }
 }
