--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -6,6 +6,10 @@
     color: #fff;
     padding: 0;
     margin: 0;
+    text-overflow: ellipsis; 
+    white-space: nowrap; 
+    overflow: hidden;
+    max-width: 100%;
 }
 
 @media (max-width: 900px) {
