--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -2,17 +2,15 @@
     display: flex;
     flex-direction: row;
     max-width: 880px;
-    height: 120px;
     width: 100%;
     justify-content: space-between;
-    margin: 0 auto 52px;
+    margin: 0 0 52px;
 }
 
 @media screen and (max-width: 900px) {
     .profile {
         flex-direction: column;
-        height: 286px;
         width: 282px;
-        margin: 42px auto 36px;
+        margin: 42px 0 36px;
     }
 }
