--- a/blocks/element/__block/element__block.css
+++ b/blocks/element/__block/element__block.css
@@ -3,4 +3,7 @@
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
