--- a/blocks/element/__like-button/_active/element__like-button_active.css
+++ b/blocks/element/__like-button/_active/element__like-button_active.css
@@ -1,3 +1,3 @@
 .element__like-button_active {
-    background-image: url('../../../images/like-active');
+    background-image: url('../../../../images/like-active.svg');
 }
