--- a/pages/index.css
+++ b/pages/index.css
@@ -29,3 +29,9 @@
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/element/__delete-button/element__delete-button.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/popup/__add-form/popup__add-form.css);
+@import url(../blocks/zoom/zoom.css);
+@import url(../blocks/zoom/__title/zoom__title.css);
+@import url(../blocks/zoom/__image/zoom__image.css);
