--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -9,11 +9,16 @@
     color: #000;
     max-width: 100%;
     padding: 0 0 12px 0;
-    margin-bottom: 30px;
+    margin-bottom: 17px;
 }
 
 .popup__input:last-of-type {
-    margin-bottom: 48px;
+    margin-bottom: 2px;
+}
+
+.popup__input_type_error {
+    border-bottom: 1px solid #ff0000;
+    margin-bottom: 5px;
 }
 
 @media (max-width: 900px) {
