--- a/blocks/popup/__error/popup__error.css
+++ b/blocks/popup/__error/popup__error.css
@@ -1,15 +1,12 @@
 .popup__error {
-    display: block;
     font-size: 12px;
     font-weight: 400;
     color: #ff0000;
     opacity: 0;
     max-width: 358px;
-    margin-bottom: 13px;
-}
-
-.popup__error:last-of-type {
-    margin-bottom: 30px;
+    line-height: 14.5px;
+    margin: 0;
+    min-height: 30px;
 }
 
 .popup__error_visible {
