--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -8,6 +8,9 @@
     font-weight: 400;
     line-height: 22px;
     max-width: 100%;
+    width: 358px;
+    height: 50px;
+    margin: 15px 4px 0 0;
 }
 
 .popup__save-button:hover {
@@ -20,5 +23,6 @@
         font-size: 14px;
         height: 46px;
         line-height: 17px;
+        margin-top: 10px;
     }
 }
