Some fixes after first review

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,5 @@
 .popup {
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
@@ -10,5 +10,5 @@
     right: 0;
     visibility: hidden;
     opacity: 0;
-    transition: visibility 0s, opacity 0.5s linear;
+    transition: visibility 0.5s, opacity 0.5s ease-in;
 }
