--- a/src/blocks/element/__title/element__title.css
+++ b/src/blocks/element/__title/element__title.css
@@ -6,6 +6,6 @@
     white-space: nowrap;
     overflow: hidden;
     line-height: 29px;
-    margin: 0 0 0 21px;
+    margin: 0 0 7px 21px;
     max-width: 70%;
 }
