--- a/src/blocks/profile/__info/profile__info.css
+++ b/src/blocks/profile/__info/profile__info.css
@@ -3,6 +3,7 @@
     padding: 0;
     margin: 0;
     padding-right: 210px;
+    padding-left: 30px;
 }
 
 @media (max-width: 900px) {
@@ -10,5 +11,6 @@
         width: 282px;
         text-align: center;
         padding-right: 0;
+        padding-left: 0;
     }
 }
